--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>me.junsu</groupId>
-    <artifactId>book</artifactId>
+    <artifactId>item</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>book</name>
-    <description>Demo project for book checkout</description>
+    <name>item</name>
+    <description>Demo project for item checkout</description>
     <properties>
         <java.version>11</java.version>
     </properties>
