--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.thymeleaf.cache=false
+spring.datasource.data=classpath:data.sql
+spring.jpa.hibernate.ddl-auto=create-drop
